kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app  : my-k8s-application
    env  : prod
    owner: PiterKononihin
spec:
  selector:
    matchLabels:
      project: myapp
  template:
    metadata:
      labels:
        project: myapp
    spec:
      containers:
        - name : web-myapp
          image: 381491829424.dkr.ecr.us-east-1.amazonaws.com/piterbog:2024-02-13_20-49-30
          ports:
            - containerPort: 80
