kubernetes/deploy-svc-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-2
  labels:
    app: kuber-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-2
  template:
    metadata:
      labels:
        app: http-server-2
    spec:
      containers:
      - name: kuber-app
        image: 381491829424.dkr.ecr.us-east-1.amazonaws.com/piterbog:latestv2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-2
spec:
  selector:
    app: http-server-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
