kubernetes/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  tls:
  - hosts:
    - app.piterbog.com
    secretName: 
  rules:
  - host: "app.piterbog.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: kuber-service-1
            port: 
              number: 80
