kubernetes/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress    
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.piterbog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stable-kube-prometheus-sta-prometheus
            port:
              number: 9090
